# NextPost

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_08_b4d7a90c21e8_update_platform_values.py  2026_07_08_ef31e44db3b6_create_users_posts_tags_and_post_tags_.py
backend/app/: main.py  scheduler.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboard.py  posts.py  tags.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py
backend/app/models/: enums.py  post.py  user.py
backend/app/schemas/: common.py  dashboard.py
backend/app/services/: demo_service.py  email_service.py  exceptions.py  image_service.py  post_service.py  reminder_service.py  tag_service.py  user_service.py
backend/nextpost_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: test_app_lifecycle.py  test_auth.py  test_dashboard.py  test_demo.py  test_post_images.py  test_posts.py  test_tags.py  test_users.py
backend/tests/services/: test_reminder_service.py
backend/tests/unit/: test_email_service.py  test_scheduler.py  test_security.py
docs/: architecture.md  database-schema.md
docs/adr/: 0001-record-architecture-decisions.md  (+13 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+54 files in other folders)
